<?xml version="1.0"?>
<package format="2">
  <name>nissan_leaf_urdf_description</name>
  <version>1.0.0</version>
  <description>URDF description of the rst nissan leaf car with attached sensors</description>
  <maintainer email="Franz.Albers@tu-dortmund.de.net">Franz Albers</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

  <depend>xacro</depend>
</package>
